core/cu29_derive/tests/compile_fail/copper_runtime/invalid_config_file.stderr
error: custom attribute panicked
 --> tests/compile_fail/copper_runtime/invalid_config_file.rs:3:1
  |
3 | #[copper_runtime(config = "config/invalid_config.ron")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Syntax Error in config: Expected opening `[` at position 2:12
